--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+"homepage": "https://Ksmadi99.github.io/Tunexx",
+
 {
   "name": "tunexx-website",
   "private": true,
@@ -24,4 +26,7 @@
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
+  "predeploy": "npm run build",
+"deploy": "gh-pages -d dist"
+
 }
