--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-"homepage": "https://Ksmadi99.github.io/Tunexx",
-
 {
   "name": "tunexx-website",
   "private": true,
@@ -9,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -25,8 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
-  }
-  "predeploy": "npm run build",
-"deploy": "gh-pages -d dist"
-
+  },
+  "homepage": "https://Ksmadi99.github.io/Tunexx"
 }
