--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "homepage": "https://Ksmadi99.github.io/Tunexx"
 }
