Refactor package.json scripts and add gh-pages
Updated scripts section with comments for clarity and added gh-pages dependency.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Ksmadi99.github.io/Tunexx",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "vite",                  // Run dev server
+    "build": "vite build",          // Build production version
+    "lint": "eslint .",             // Lint your code
+    "preview": "vite preview",      // Preview built version
+    "predeploy": "npm run build",   // Runs automatically before "deploy"
+    "deploy": "gh-pages -d dist"    // Deploys to GitHub Pages
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -24,15 +25,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
-  },
-  "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
-  "homepage": "https://Ksmadi99.github.io/Tunexx"
+    "vite": "^7.2.4",
+    "gh-pages": "^5.0.0"
+  }
 }
+
